Added and configured posts capabilities, and created footer

--- a/404.md
+++ b/404.md
@@ -1,5 +1,8 @@
 ---
-layout: default
+layout: post
+permalink: /404.html
 ---
 
-<i class="fa fa-ban fa-5x"> 404 - No such thing here, sorry!
+<i class="fa fa-ban fa-5x"> 404
+
+### No such thing here, sorry!
