New post on SonarQube. Updated 404 page

--- a/404.md
+++ b/404.md
@@ -1,8 +1,7 @@
 ---
 layout: post
+title: "404"
 permalink: /404.html
 ---
 
-<i class="fa fa-ban fa-5x"> 404
-
-### No such thing here, sorry!
+## No such thing here, sorry!
